--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node-sass -wr assets/sass -o assets/css | live-server --ignore=assets/sass,.git/,.idea/,.vscode/ ./",
-    "build": "node-sass -x assets/sass -o assets/css"
+    "dev": "sass -wr assets/sass assets/css | live-server --ignore=assets/sass,.git/,.idea/,.vscode/ ./",
+    "build": "sass -x assets/sass assets/css"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,9 @@
   "license": "MIT+CC-BY-3.0",
   "homepage": "http://milano.python.it",
   "devDependencies": {
-    "live-server": "^1.1.0",
-    "node-sass": "^7.0.1"
+    "live-server": "^1.1.0"
+  },
+  "dependencies": {
+    "sass": "^1.97.1"
   }
 }
